--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Including the Favorite Icon-->
 		<link rel="shortcut icon" href="img/favicon.ico">
 		<!-- Title -->
